correct gaps between images

--- a/style.css
+++ b/style.css
@@ -13,16 +13,15 @@
 }
 
 .recipe_links {
-	text-align: center;
-	display: block;
+	justify-content: center;
+	display: flex;
+	column-gap: 1710px;
 }
 
 .recipe_img {
 	width: 300px;
 	height: 300px;
 	border: 5px ridge blue;
-	margin: 0px 100px;
-
 }
 
 .recipe_img:hover {
